<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.microbitlearner.TitleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_topicsFragment"
            app:destination="@id/topicsFragment" />
    </fragment>
    <fragment
        android:id="@+id/mcQuestionFragment"
        android:name="com.example.microbitlearner.McQuestionFragment"
        android:label="Code error quiz"
        tools:layout="@layout/fragment_mc_question">
        <argument
            android:name="difficulty"
            app:argType="string" />
        <action
            android:id="@+id/action_mcQuestionFragment_to_quizResultFragment"
            app:destination="@id/quizResultFragment"
            app:popUpTo="@id/mcQuestionFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.microbitlearner.AboutFragment"
        android:label="@string/title_about_learner"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/rulesFragment"
        android:name="com.example.microbitlearner.RulesFragment"
        android:label="@string/title_learner_rules"
        tools:layout="@layout/fragment_rules" />
    <fragment
        android:id="@+id/topicsFragment"
        android:name="com.example.microbitlearner.TopicsFragment"
        android:label="Python quizzes"
        tools:layout="@layout/fragment_topics">
        <action
            android:id="@+id/action_topicsFragment_to_mcqPremadeFragment"
            app:destination="@id/mcqPremadeFragment" />
        <action
            android:id="@+id/action_topicsFragment_to_quizFragment"
            app:destination="@id/quizFragment" />
        <action
            android:id="@+id/action_topicsFragment_to_mcQuestionFragment"
            app:destination="@+id/mcQuestionFragment" />
        <action
            android:id="@+id/action_topicsFragment_to_randomisedCodeFragment"
            app:destination="@id/randomisedCodeFragment" />
    </fragment>
    <fragment
        android:id="@+id/quizFragment"
        android:name="com.example.microbitlearner.QuizFragment"
        android:label="Question 1"
        tools:layout="@layout/fragment_quiz">
        <argument
            android:name="topic"
            app:argType="integer" />
        <action
            android:id="@+id/action_quizFragment_to_quizResultFragment"
            app:destination="@id/quizResultFragment"
            app:popUpTo="@id/quizFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/quizResultFragment"
        android:name="com.example.microbitlearner.QuizResultFragment"
        android:label="@string/quiz_result"
        tools:layout="@layout/fragment_quizresult">
        <argument
            android:name="numCorrectQuestions"
            app:argType="integer" />
        <argument
            android:name="numQuestions"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/randomisedCodeFragment"
        android:name="com.example.microbitlearner.RandomisedCodeFragment"
        android:label="Loading..."
        tools:layout="@layout/fragment_randomised_code">
        <argument
            android:name="difficulty"
            app:argType="string" />
        <action
            android:id="@+id/action_randomisedCodeFragment_to_quizResultFragment"
            app:destination="@id/quizResultFragment"
            app:popUpTo="@id/randomisedCodeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/mcqPremadeFragment"
        android:name="com.example.microbitlearner.McqPremadeFragment"
        android:label="Multiple choice quiz"
        tools:layout="@layout/fragment_mc_question">
        <action
            android:id="@+id/action_mcqPremadeFragment_to_quizResultFragment"
            app:destination="@id/quizResultFragment"
            app:popUpTo="@id/mcqPremadeFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>