<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/Topics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.microbitlearner.TopicsFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/topic1_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/comfortaa"
                android:paddingStart="@dimen/topics_button_StartEnd"
                android:paddingTop="@dimen/topics_button_TopBottom"
                android:paddingEnd="@dimen/topics_button_StartEnd"
                android:paddingBottom="@dimen/topics_button_TopBottom"
                android:text="@string/topic1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/topics_button_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/topic2_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/comfortaa"
                android:paddingStart="@dimen/topics_button_StartEnd"
                android:paddingTop="@dimen/topics_button_TopBottom"
                android:paddingEnd="@dimen/topics_button_StartEnd"
                android:paddingBottom="@dimen/topics_button_TopBottom"
                android:text="@string/topic2"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/topics_button_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/topic3_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/comfortaa"
                android:paddingStart="@dimen/topics_button_StartEnd"
                android:paddingTop="@dimen/topics_button_TopBottom"
                android:paddingEnd="@dimen/topics_button_StartEnd"
                android:paddingBottom="@dimen/topics_button_TopBottom"
                android:text="@string/topic3"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/topics_button_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/topic4_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/comfortaa"
                android:paddingStart="@dimen/topics_button_StartEnd"
                android:paddingLeft="5dp"
                android:paddingTop="@dimen/topics_button_TopBottom"
                android:paddingEnd="@dimen/topics_button_StartEnd"
                android:paddingRight="5dp"
                android:paddingBottom="@dimen/topics_button_TopBottom"
                android:text="@string/topic4"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/topics_button_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/topic5_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/comfortaa"
                android:paddingStart="@dimen/topics_button_StartEnd"
                android:paddingTop="@dimen/topics_button_TopBottom"
                android:paddingEnd="@dimen/topics_button_StartEnd"
                android:paddingBottom="@dimen/topics_button_TopBottom"
                android:text="@string/topic5"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/topics_button_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/topic6_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/comfortaa"
                android:paddingStart="@dimen/topics_button_StartEnd"
                android:paddingTop="@dimen/topics_button_TopBottom"
                android:paddingEnd="@dimen/topics_button_StartEnd"
                android:paddingBottom="@dimen/topics_button_TopBottom"
                android:text="@string/topic6"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/topics_button_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/topic7_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/comfortaa"
                android:paddingStart="@dimen/topics_button_StartEnd"
                android:paddingTop="@dimen/topics_button_TopBottom"
                android:paddingEnd="@dimen/topics_button_StartEnd"
                android:paddingBottom="@dimen/topics_button_TopBottom"
                android:text="@string/topic7"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/topics_button_text"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</layout>