<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.GameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mcqloadingImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="300dp"
            android:paddingBottom="300dp"
            android:visibility="visible"
            app:srcCompat="@drawable/android" />

        <ScrollView
            android:id="@+id/mcqSV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mcqFrameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:visibility="visible">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="0dp"
                        android:layout_height="350dp"
                        android:layout_marginBottom="100dp"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toTopOf="@+id/questionRadioGroup"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/questionText"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="40dp"
                            android:layout_marginEnd="20dp"
                            android:background="@drawable/questionbg"
                            android:fontFamily="@font/comfortaa"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:paddingRight="5dp"
                            android:text="@string/question_goes_here"
                            android:textAlignment="inherit"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:typeface="normal" />

                        <TextView
                            android:id="@+id/no_indicator"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/comfortaa"
                            android:gravity="center"
                            android:padding="16dp"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/questionRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                        <RadioButton
                            android:id="@+id/firstOptionRadioButton"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/radio_bg"
                            android:button="@android:color/transparent"
                            android:checked="true"
                            android:text="@string/answer"
                            android:textAlignment="center"
                            tools:fontFamily="@font/comfortaa_variablefont_wght" />

                        <RadioButton
                            android:id="@+id/secondOptionRadioButton"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/radio_bg"
                            android:button="@android:color/transparent"
                            android:fontFamily="@font/comfortaa_variablefont_wght"
                            android:text="@string/answer"
                            android:textAlignment="center"
                            android:textColor="@android:color/black" />

                        <RadioButton
                            android:id="@+id/thirdOptionRadioButton"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/radio_bg"
                            android:button="@android:color/transparent"
                            android:fontFamily="@font/comfortaa_variablefont_wght"
                            android:text="@string/answer"
                            android:textAlignment="center"
                            android:textColor="@android:color/black" />

                        <RadioButton
                            android:id="@+id/forthOptionRadioButton"
                            android:layout_width="300dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/radio_bg"
                            android:button="@android:color/transparent"
                            android:fontFamily="@font/comfortaa_variablefont_wght"
                            android:text="@string/answer"
                            android:textAlignment="center"
                            android:textColor="@android:color/black" />

                    </RadioGroup>

                    <Button
                        android:id="@+id/submitButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/round_borders"
                        android:fontFamily="@font/comfortaa"
                        android:text="@string/submit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/questionRadioGroup" />

                    <Button
                        android:id="@+id/mcqhintButton"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_borders"
                        android:fontFamily="@font/comfortaa"
                        android:text="@string/hint"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/submitButton" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>